update the randomly generate

--- a/wGAN-GP.ipynb
+++ b/wGAN-GP.ipynb
@@ -1465,6 +1465,49 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m         plt\u001b[39m.\u001b[39maxis(\u001b[39m'\u001b[39m\u001b[39moff\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     21\u001b[0m     plt\u001b[39m.\u001b[39mshow()\n\u001b[1;32m---> 23\u001b[0m generate_image_randomly(generator)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'generator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# show the generating fashion images randomly\n",
+    "def generate_image_randomly(generator):\n",
+    "    generator.eval()\n",
+    "    z = torch.randn(1, Z_DIM)\n",
+    "    if torch.cuda.is_available():\n",
+    "        generator = generator.cuda()\n",
+    "        z = z.cuda()\n",
+    "\n",
+    "    # generate image each label one time\n",
+    "    fig = plt.figure(figsize=(25, 4))\n",
+    "    for i in range(NUM_CLASSES):\n",
+    "        y = torch.tensor([i])\n",
+    "        if torch.cuda.is_available():\n",
+    "            y = y.cuda()\n",
+    "        image = generator(z, y).squeeze()\n",
+    "        image = image.detach().cpu().numpy()\n",
+    "        plt.subplot(1, NUM_CLASSES, i+1)\n",
+    "        plt.title(str(i))\n",
+    "        plt.imshow(image, cmap='gray')\n",
+    "        plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "generate_image_randomly(generator)"
+   ]
   }
  ],
  "metadata": {
