--- a/wGAN.ipynb
+++ b/wGAN.ipynb
@@ -995,6 +995,37 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show the generating fashion images randomly\n",
+    "def generate_image_randomly(generator):\n",
+    "    generator.eval()\n",
+    "    z = torch.randn(1, Z_DIM)\n",
+    "    if torch.cuda.is_available():\n",
+    "        generator = generator.cuda()\n",
+    "        z = z.cuda()\n",
+    "\n",
+    "    # generate image each label one time\n",
+    "    fig = plt.figure(figsize=(25, 4))\n",
+    "    for i in range(NUM_CLASSES):\n",
+    "        y = torch.tensor([i])\n",
+    "        if torch.cuda.is_available():\n",
+    "            y = y.cuda()\n",
+    "        image = generator(z, y).squeeze()\n",
+    "        image = image.detach().cpu().numpy()\n",
+    "        plt.subplot(1, NUM_CLASSES, i+1)\n",
+    "        plt.title(str(i))\n",
+    "        plt.imshow(image, cmap='gray')\n",
+    "        plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "generate_image_randomly(generator)"
+   ]
   }
  ],
  "metadata": {
